[project]
name = "Ion"
description = "The next-generation Intranet platform for TJHSST"
readme = "README.rst"
authors = [
    {name = "The TJHSST Computer Systems Lab", email = "intranet@tjhsst.edu"}
]
requires-python = ">=3.8"
version = "1.0"
dynamic = ["dependencies"]
license = { text = "GPLv2+" }
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Framework :: Django :: 3.2",
]
[project.urls]
Repository = "https://github.com/tjcsl/ion"
[tool.setuptools]
packages = ["intranet", "migrations"]
[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
[tool.black]
line-length = 150
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | media
  | migrations
  | secret.*
  | stubs
)/
'''
