[project]
name = "Ion"
description = "The next-generation Intranet platform for TJHSST"
readme = "README.rst"
authors = [
    {name = "The TJHSST Computer Systems Lab", email = "intranet@tjhsst.edu"}
]
requires-python = ">=3.8"
version = "1.0.0"
license = { text = "GPLv2+" }
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Framework :: Django :: 3.2",
]
dependencies = [
    "argon2-cffi>=23.1.0",
    "babel>=2.16.0",
    "bcrypt>=4.2.0",
    "beautifulsoup4~=4.11",
    "bleach~=5.0",
    "celery~=5.2",
    "channels-redis~=3.4",
    "django-cacheops~=7.0",
    "django-cors-headers~=3.13",
    "django-debug-toolbar~=3.6",
    "django-extensions~=3.2",
    "django-formtools~=2.3",
    "django-inline-svg~=0.1",
    "django-maintenance-mode~=0.16",
    "django-oauth-toolkit~=2.3",
    "django-pipeline~=3.0",
    "django-prometheus~=2.2",
    # TODO: replace with django RedisCache in django~=4.2
    "django-redis-cache~=3.0",
    "django-redis-sessions~=0.6",
    "django-referrer-policy>=1.0",
    "django-requestlogging-redux~=1.2",
    "django-simple-history~=3.1",
    "django-user-agents~=0.4",
    "django-widget-tweaks~=1.4",
    "djangorestframework~=3.14",
    "django~=3.2",
    "flower>=2.0.1",
    "gunicorn~=22.0",
    "hiredis~=3.0",
    "lxml>=5.3.0",
    "pexpect~=4.8",
    "prometheus-client~=0.17",
    "psycopg2~=2.9",
    "pycryptodome~=3.19",
    "pyrankvote~=2.0",
    "pysftp~=0.2",
    "python-dateutil~=2.8",
    "python-magic~=0.4",
    "python-pam~=2.0",
    "reportlab~=4.0",
    "requests-oauthlib~=2.0",
    "requests~=2.32",
    "sentry-sdk~=2.0",
    "six~=1.16",
    "vine>=5.1.0",
    "xhtml2pdf~=0.2",
    "names>=0.3.0",
]

[project.urls]
Repository = "https://github.com/tjcsl/ion"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "pre-commit>=3.5.0",
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=7.1.2",
    "sphinxcontrib-django>=2.5",
    "whitenoise>=6.7.0",
]
ci = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["intranet", "migrations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
required-version = ">=0.6.0"

[tool.ruff]
extend-exclude = [
  "Ion.egg-info",
  "build",
  ".env",
  "env",
  "migrations",
]

# show fixes made in stdout
# show-fixes = true

line-length = 150

target-version = "py38"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-django
    "DJ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pylint
    "PL",
    # ruff
    "RUF",
    # pyupgrade
    "UP",
]
ignore = [
  # default arguments for timezone.now()
  "B008",
  # null=True on CharField/TextField
  "DJ001",
  # No __str__ method on Model
  "DJ008",
  # Django order of model methods
  "DJ012",
  # ambiguous variable name
  "E741",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
  # branching
  "PLR09",
  # avoid magic numbers
  "PLR2004",
  # loop variables overwritten by assignment
  "PLW2901",
  # Use ternary operator (x if cond else y)
  "RUF005",
  # mutable class attrs annotated as typing.ClassVar
  "RUF012",
  # implicit Optional
  "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",
  "F403",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.codespell]
write-changes = true
skip = "*.pyi,*/vendor,*/migrations,*media"
ignore-words-list = "num,ans,intranet,ther,usera,userb"
# match: # codespell: ignore
ignore-regex=".+# *codespell: *ignore"
